# ImmoScan

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build and push new.yml  build and push.yml
